# cicro-benchmarks

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  EVALUATION.md  FINDINGS.md  GithubProjectsFilteres.csv  INTERNAL.md  LICENSE.md  NOTES.md  README.md  SETUP.md  add_new_test.py  create-cran.R  create_makefile_text.py  database.db  example_result.json  requirements.R  requirements.txt
C-Hayai/: CMakeLists.txt  sample.json
C-Hayai/src/: CMakeLists.txt  chayai.h  chayai_benchmark_descriptor.h  chayai_benchmark_pp.h  chayai_benchmark_result.h  chayai_benchmarker.c  chayai_benchmarker.h  chayai_clock.c  chayai_clock.h  chayai_console_outputter.c  chayai_json_outputter.c  chayai_json_outputter.h  chayai_main.c  chayai_main.h  chayai_outputter.h  chayai_papi.c  chayai_papi.h  chayai_util.c  chayai_util.h
benchmarks/: .gitignore  100-Cranium_test.c  Kazade-kazmath_test.c  Makefile  RoaringBitmap-CRoaring_test.c  Themaister-libfmsynth_test.c  adamdunkels-ubasic_test.c  andikleen-snappy-c_test.c  antirez-otree_test.c  antirez-rax_test.c  armon-libart_test.c  bashrc-libdeep_test.c  camgunz-cmp_test.c  chokkan-liblbfgs_test.c  chrismoos-hash-ring_test.c  cloudwu-cstring_test.c  codeplea-genann_test.c  codeplea-tinyexpr_test.c  ctz-cifra_test.c  dbalmain-ferret_test.ignored.c  dcjones-hat-trie_test.c  dhess-c-ringbuf_test.c  fabianishere-brainfuck_test.c  faragon-libsrt_test.c  ferreiradaselva-mathc_test.c  flame-blis_test.c  imneme-pcg-c-basic_test.c  josephg-librope_test.c  jtsiomb-kdtree_test.c  kbranigan-cJSON_test.c  khovratovich-Argon2_test.c  kuba---zip_test.c  (+33 more)
(+562 files in other folders)
